--- a/source/DerivedStyles/GridViewItemTemplate.xaml
+++ b/source/DerivedStyles/GridViewItemTemplate.xaml
@@ -10,50 +10,52 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type GameListItem}">
-                    <Border BorderThickness="{Settings GridItemMargin}" BorderBrush="{DynamicResource GridItemBackgroundBrush}">
-                        <StackPanel Name="PART_PanelHost"
+                    <Grid>
+                        <Border BorderThickness="{Settings GridItemMargin}" BorderBrush="{DynamicResource GridItemBackgroundBrush}">
+                            <StackPanel Name="PART_PanelHost"
                                     d:DataContext="{x:Static DesignMainViewModel.DesignSelectedGameIntance}">
 
-                            <Grid Width="{Settings GridItemWidth}"
+                                <Grid Width="{Settings GridItemWidth}"
                               Height="{Settings GridItemHeight}">
-                                <Image Name="PART_ImageCover"
+                                    <Image Name="PART_ImageCover"
                                    RenderOptions.BitmapScalingMode="Fant" StretchDirection="Both"
                                    HorizontalAlignment="Center" VerticalAlignment="Center"
                                    Stretch="{Settings CoverArtStretch}" />
-                                <Border Background="{DynamicResource GridItemBackgroundBrush}" x:Name="TextGameName" Visibility="Collapsed">
-                                    <TextBlock Text="{Binding DisplayName}"
+                                    <Border Background="{DynamicResource GridItemBackgroundBrush}" x:Name="TextGameName" Visibility="Collapsed">
+                                        <TextBlock Text="{Binding DisplayName}"
                                            TextWrapping="Wrap" Margin="5"
                                            Style="{StaticResource BaseTextBlockStyle}"
                                            TextTrimming="CharacterEllipsis" TextAlignment="Center"
                                            HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                                </Border>
-                                <Border Background="Transparent" x:Name="BorderMouseOver" Visibility="Collapsed" />
-                                <Grid HorizontalAlignment="Right" VerticalAlignment="Top" Margin="5">
-                                    <Border CornerRadius="8" Background="{DynamicResource OpaqueGrayHighlightBrush}" Opacity="0.2"/>
-                                    <ContentControl x:Name="DuplicateHider_SourceSelector1" RenderOptions.BitmapScalingMode="Fant" Visibility="Visible" MaxHeight="25"/>
-                                </Grid>
-                                <Viewbox VerticalAlignment="Bottom" HorizontalAlignment="Left"
-                                         Name="GameControls" Opacity="0.15">
-                                    <Border Margin="5,50,30,5" Background="#54212124"
-                                            CornerRadius="{DynamicResource ControlCornerRadiusSmall}" Padding="1">
-                                        <StackPanel Orientation="Horizontal">
-                                            <Button Height="24" Width="24" Name="PART_ButtonPlay" Margin="0" VerticalAlignment="Center"
-                                                FontFamily="{StaticResource FontIcoFont}" Tag="Installed" Style="{DynamicResource ButtonPlay}" />
-                                            <Button Height="24" Width="24" Name="PART_ButtonInfo" Style="{DynamicResource InfoButton}"
-                                                Margin="3,0,0,0" VerticalAlignment="Center" FontFamily="{StaticResource FontIcoFont}" />
-                                        </StackPanel>
                                     </Border>
-                                </Viewbox>
-                            </Grid>
-                            <TextBlock Text="{Binding DisplayName}"
+                                    <Grid HorizontalAlignment="Right" VerticalAlignment="Top" Margin="5">
+                                        <Border CornerRadius="8" Background="{DynamicResource OpaqueGrayHighlightBrush}" Opacity="0.2"/>
+                                        <ContentControl x:Name="DuplicateHider_SourceSelector1" RenderOptions.BitmapScalingMode="Fant" Visibility="Visible" MaxHeight="25"/>
+                                    </Grid>
+                                    <Viewbox VerticalAlignment="Bottom" HorizontalAlignment="Left"
+                                         Name="GameControls" Opacity="0.15">
+                                        <Border Margin="5,50,30,5" Background="#54212124"
+                                            CornerRadius="{DynamicResource ControlCornerRadiusSmall}" Padding="1">
+                                            <StackPanel Orientation="Horizontal">
+                                                <Button Height="24" Width="24" Name="PART_ButtonPlay" Margin="0" VerticalAlignment="Center"
+                                                FontFamily="{StaticResource FontIcoFont}" Tag="Installed" Style="{DynamicResource ButtonPlay}" />
+                                                <Button Height="24" Width="24" Name="PART_ButtonInfo" Style="{DynamicResource InfoButton}"
+                                                Margin="3,0,0,0" VerticalAlignment="Center" FontFamily="{StaticResource FontIcoFont}" />
+                                            </StackPanel>
+                                        </Border>
+                                    </Viewbox>
+                                </Grid>
+                                <TextBlock Text="{Binding DisplayName}"
                                    Style="{DynamicResource BaseTextBlockStyle}"                                                                   
                                    TextAlignment="Center" TextTrimming="CharacterEllipsis"
                                    VerticalAlignment="Center"
                                    Padding="2,5,2,5" Grid.Row="1" Grid.Column="0"
                                    Width="{Settings GridItemWidth}" 
                                    Visibility="{Settings ShowNamesUnderCovers}" />
-                        </StackPanel>
-                    </Border>
+                            </StackPanel>
+                        </Border>
+                        <Border Background="#000000" x:Name="BorderMouseOver" Visibility="Collapsed" IsHitTestVisible="False" Opacity="0.60"/>
+                    </Grid>
                     <ControlTemplate.Triggers>
                         <DataTrigger Binding="{Binding IsInstalled}" Value="False">
                             <Setter Property="Tag" Value="NotInstalled" TargetName="PART_ButtonPlay" />
@@ -73,9 +75,42 @@
                             <Setter Property="Visibility" Value="Visible" TargetName="TextGameName"/>
                         </MultiDataTrigger>
                         <Trigger Property="IsMouseOver" Value="True">
-                            <Setter Property="Visibility" Value="Visible" TargetName="BorderMouseOver"/>
                             <Setter Property="Opacity" Value="1.0" TargetName="GameControls"/>
                         </Trigger>
+                        <MultiDataTrigger>
+                            <MultiDataTrigger.Conditions>
+                                <Condition Binding="{Binding IsInstalled}" Value="False" />
+                                <Condition Binding="{Binding RelativeSource={RelativeSource Self}, Path=IsMouseOver}" Value="True" />
+                            </MultiDataTrigger.Conditions>
+                            <MultiDataTrigger.EnterActions>
+                                <BeginStoryboard>
+                                    <Storyboard>
+                                        <DoubleAnimation
+                                            Storyboard.TargetProperty="Opacity"
+                                            To="0.00" Storyboard.TargetName="BorderMouseOver"
+                                            Duration="0:0:0.30">
+                                            <DoubleAnimation.EasingFunction>
+                                                <CubicEase EasingMode="EaseOut"/>
+                                            </DoubleAnimation.EasingFunction>
+                                        </DoubleAnimation>
+                                    </Storyboard>
+                                </BeginStoryboard>
+                            </MultiDataTrigger.EnterActions>
+                            <MultiDataTrigger.ExitActions>
+                                <BeginStoryboard>
+                                    <Storyboard>
+                                        <DoubleAnimation
+                                            Storyboard.TargetProperty="Opacity"
+                                            To="0.60" Storyboard.TargetName="BorderMouseOver"
+                                            Duration="0:0:0.30">
+                                            <DoubleAnimation.EasingFunction>
+                                                <CubicEase EasingMode="EaseOut"/>
+                                            </DoubleAnimation.EasingFunction>
+                                        </DoubleAnimation>
+                                    </Storyboard>
+                                </BeginStoryboard>
+                            </MultiDataTrigger.ExitActions>
+                        </MultiDataTrigger>
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
             </Setter.Value>
