--- a/source/Views/DetailsViewGameOverview.xaml
+++ b/source/Views/DetailsViewGameOverview.xaml
@@ -526,28 +526,14 @@
                                         </Grid.ColumnDefinitions>
 
                                         <StackPanel Grid.Column="0" Margin="0,0,40,0">
-
                                             <StackPanel Name="PART_ElemNotes" Margin="0,0,0,10">
-                                                <StackPanel.Style>
-                                                    <Style TargetType="StackPanel">
-                                                        <Setter Property="Visibility" Value="Visible" />
-                                                        <Style.Triggers>
-                                                            <DataTrigger Binding="{Settings DetailsVisibility.Genres}" Value="False">
-                                                                <Setter Property="Visibility" Value="Collapsed" />
-                                                            </DataTrigger>
-                                                        </Style.Triggers>
-                                                    </Style>
-                                                </StackPanel.Style>
                                                 <Label Content="{DynamicResource LOCNotesLabel}" Style="{DynamicResource FeedSectionLabel}"/>
                                                 <Grid Margin="0,0,0,10" Background="{DynamicResource  LinksContainerBackgroundBrush}" MinHeight="45">
-                                                    <Grid.RowDefinitions>
-                                                        <RowDefinition Height="Auto" />
-                                                    </Grid.RowDefinitions>
                                                     <Border Style="{DynamicResource OutlineBorder}" />
                                                     <TextBox Name="PART_TextNotes" IsReadOnly="True"
                                                      BorderThickness="0" Background="Transparent"
                                                      AcceptsReturn="True" TextWrapping="Wrap"
-                                                     Margin="0" Padding="10"/>
+                                                     Margin="20,0,20,0" Padding="10" VerticalAlignment="Center"/>
                                                 </Grid>
                                             </StackPanel>
                                             
@@ -576,7 +562,7 @@
                                                         </ItemsControl.ItemsPanel>
                                                         <ItemsControl.ItemContainerStyle>
                                                             <Style TargetType="ContentPresenter">
-                                                                <Setter Property="FrameworkElement.Margin" Value="0,0,50,0" />
+                                                                <Setter Property="FrameworkElement.Margin" Value="20,0,20,0" />
                                                             </Style>
                                                         </ItemsControl.ItemContainerStyle>
                                                     </ItemsControl>
@@ -611,7 +597,7 @@
                                                         </ItemsControl.ItemsPanel>
                                                         <ItemsControl.ItemContainerStyle>
                                                             <Style TargetType="ContentPresenter">
-                                                                <Setter Property="FrameworkElement.Margin" Value="0,0,50,0" />
+                                                                <Setter Property="FrameworkElement.Margin" Value="20,0,20,0" />
                                                             </Style>
                                                         </ItemsControl.ItemContainerStyle>
                                                     </ItemsControl>
@@ -643,7 +629,7 @@
                                                         </ItemsControl.ItemsPanel>
                                                         <ItemsControl.ItemContainerStyle>
                                                             <Style TargetType="ContentPresenter">
-                                                                <Setter Property="FrameworkElement.Margin" Value="0,0,50,0" />
+                                                                <Setter Property="FrameworkElement.Margin" Value="20,0,20,0" />
                                                             </Style>
                                                         </ItemsControl.ItemContainerStyle>
                                                     </ItemsControl>
@@ -675,7 +661,7 @@
                                                         </ItemsControl.ItemsPanel>
                                                         <ItemsControl.ItemContainerStyle>
                                                             <Style TargetType="ContentPresenter">
-                                                                <Setter Property="FrameworkElement.Margin" Value="0,0,50,0" />
+                                                                <Setter Property="FrameworkElement.Margin" Value="20,0,20,0" />
                                                             </Style>
                                                         </ItemsControl.ItemContainerStyle>
                                                     </ItemsControl>
