Fix contents inside TabControl using Hand cursor

--- a/source/DefaultControls/TabControl.xaml
+++ b/source/DefaultControls/TabControl.xaml
@@ -96,7 +96,6 @@
     <Style TargetType="{x:Type TabItem}" BasedOn="{StaticResource BaseStyle}">
         <Setter Property="SnapsToDevicePixels" Value="True" />
         <Setter Property="Foreground" Value="{DynamicResource TextBrush}" />
-        <Setter Property="Cursor" Value="Hand"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type TabItem}">
@@ -105,7 +104,7 @@
                                 SnapsToDevicePixels="True"
                                 BorderThickness="0,0,0,2" BorderBrush="{DynamicResource GlyphBrush}"/>
                         <TextBlock x:Name="TextContent" Padding="5" Style="{DynamicResource BaseTextBlockStyle}"
-                                   Foreground="{TemplateBinding Foreground}" Opacity="0.50">
+                                   Foreground="{TemplateBinding Foreground}" Opacity="0.50" Cursor="Hand">
                             <ContentPresenter x:Name="ContentSite" RecognizesAccessKey="True" ContentSource="Header"
                                               HorizontalAlignment="Center" Margin="5" VerticalAlignment="Center" />
                         </TextBlock>
