--- a/source/DerivedStyles/DetailsViewItemStyle.xaml
+++ b/source/DerivedStyles/DetailsViewItemStyle.xaml
@@ -21,7 +21,7 @@
                             <Setter Property="Foreground" Value="{DynamicResource TextBrush}" />
                         </DataTrigger>
                         <DataTrigger Binding="{Binding IsInstalled}" Value="False">
-                            <Setter Property="Foreground" Value="{DynamicResource TextBrushDarker}" />
+                            <Setter Property="Foreground" Value="{DynamicResource LibraryDetailsViewNotInstalledForegroundBrush}" />
                         </DataTrigger>
                         <Trigger Property="IsMouseOver" Value="True">
                             <Setter Property="Background" Value="{DynamicResource DetailsViewItemIsMouseOverBackgroundBrush}" TargetName="Border"/>
